# llm-os

./: .env.example  .gitignore  README.md  chainlit.md  pyproject.toml
.chainlit/: config.toml
llm_os/: app.py  info.py  model.py  prompt.py  utils.py  xml_parser.py
