[tool.poetry]
name = "llm-os"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
psutil = "^6.0.0"
langchain = "^0.2.7"
langgraph = "^0.1.8"
types-psutil = "^6.0.0.20240621"
langchain-anthropic = "^0.1.20"
langcode = "^0.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
